fix missing background color

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,7 +77,9 @@
     background-repeat: no-repeat;
     border-radius: 1rem 0 0 0;
 } 
-
+.bg-alt {
+    background-color: var(--bg-alt);
+}
 .bg-gradient {
     background: 
         -webkit-radial-gradient(0% 100%, ellipse cover, rgba(35, 24, 82, 0.22) 10%, rgba(138, 114, 76, 0) 40%), 
